<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Developers"
    android:background="@drawable/bg1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="345dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afifah"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="345dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ilmi"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="406dp"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/luthfi"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="465dp"
        android:layout_marginLeft="210dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gibran"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="528dp"
        android:layout_marginLeft="170dp"/>





</LinearLayout>